test/corpus/html.txt
========
Simple HTML
========

<p>Simple HTML</p>

-----

(compilation_unit
  (element
    (tag_name)
    (html_text)
    (end_tag
      (tag_name))))

===========
HTML with attributes
===========

<p id="foo" class="bar">HTML with attributes</p>
----

(compilation_unit
  (element
    (tag_name)
    (html_attribute
      (html_attribute_name)
      (html_attribute_value))
    (html_attribute
      (html_attribute_name)
      (html_attribute_value))
    (html_text)
    (end_tag
      (tag_name))))

===========
Attribute name with space
===========
<p class="foo bar">HTML with attributes</p>

----

(compilation_unit
  (element
    (tag_name)
    (html_attribute
      (html_attribute_name)
      (html_attribute_value))
    (html_text)
    (end_tag
      (tag_name))))

=========
Self Closing Tag
=========
<input type="text" value="foo" />
----

(compilation_unit
  (element
    (tag_name)
    (html_attribute
      (html_attribute_name)
      (html_attribute_value))
    (html_attribute
      (html_attribute_name)
      (html_attribute_value))))

====
self closing image tag
====
<img src="foo.jpg" />
----

(compilation_unit
  (element
    (tag_name)
    (html_attribute
      (html_attribute_name)
      (html_attribute_value))))

===
HTML boolean attribute
===

<input type="checkbox" checked />
---

(compilation_unit
  (element
    (tag_name)
    (html_attribute
      (html_attribute_name)
      (html_attribute_value))
    (boolean_html_attribute)))

===
complex html
===
<itunes:image>http://www.thisdeveloperslife.com/images/logo_full1400.jpg</itunes:image>
---

(compilation_unit
  (element
    (tag_name)
    (html_text)
    (end_tag
      (tag_name))))
